# triton-ascend

./: .gitee-ci.yml  .gitignore  CMakeLists.txt  LICENSE  OWNERS  README.md  setup.py
ascend/: .gitignore  CMakeLists.txt  triton_ascend.cpp
ascend/backend/: __init__.py  compiler.py  cpu_driver.py  device_print.h  driver.py  npu_utils.cpp  utils.py
ascend/examples/benchmark_cases/: layernorm_perf.py  softmax_perf.py
ascend/examples/generalization_cases/: full_run.sh  run_daily.sh  test_abs.py  test_advance.py  test_and.py  test_argmax.py  test_argmin.py  test_atan.py  test_atomic_add.py  test_atomic_max.py  test_atomic_min.py  test_broadcast.py  test_broadcast_to.py  test_cast.py  test_cdiv.py  test_ceil.py  test_common.py  test_cos.py  test_count_dim0.py  test_count_dim1.py  test_device_print_op.py  test_div_rn.py  test_eq.py  test_erf.py  test_exp.py  test_exp2.py  test_expand_dims.py  test_fdiv.py  test_flip.py  test_full_op.py  test_ge_op.py  test_general_add.py  test_general_arange.py  test_general_cat.py  test_general_clamp.py  test_general_div.py  test_general_floor.py  test_general_floordiv.py  test_general_fma.py  test_general_gather.py  (+56 more)
ascend/examples/pytest_ut/: attn_cp_triton_kernel_3d.py  attn_cp_triton_kernel_3d_la.py  run_test.sh  test_2d_permute.py  test_3Dgrid.py  test_abs.py  test_abs_2.py  test_add.py  test_advance.py  test_and.py  test_atan.py  test_atomic_add.py  test_atomic_max.py  test_attn_cp.py  test_block_ptr.py  test_broadcast_op.py  test_cast_full.py  test_cat.py  test_cat_dim.py  test_cdiv.py  test_ceil.py  test_clamp.py  test_common.py  test_cos.py  test_cos_2.py  test_count_dim0.py  test_count_dim1.py  test_debug_barrier.py  test_device_print.py  test_div.py  test_downgrade.py  test_elementwise_ceil.py  (+111 more)
ascend/triton-adapter/: CMakeLists.txt  triton_adapter.cc
(+70 files in other folders)
